# deepfraud-rust

./: .gitignore  LICENSE  README.md  main.py  output.json  requirements.txt  scaler.pkl  test.py  train.py
deepfraud/: Cargo.toml  README.md
deepfraud/src/: lib.rs
