[package]
name = "deepfraud"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = {version = "0.24.1", features = ["extension-module"] }
rand = "0.9.0"
rand_chacha = "0.9.0"
rayon = "1.10.0"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lib]
name = "deepfraud"  # This is also important
crate-type = ["cdylib"]
